# ia-recommendation

./: .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  e build --no-cache  entrypoint.sh  populate_db.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: database.py  main.py  models.py  schemas.py
app/agents/: recommendation_agent.py
app/api/endpoints/: auth.py  recommendations.py  users.py
app/api/endpoints/routes/: recommendations.py
app/core/: app_logging.py  config.py  logging.py  security.py
app/routes/: users.py
app/tests/: conftest.py  test_auth.py  test_langchain.py  test_recommendations.py  test_users.py
docs/: architecture.md  report.md  user_guide.md
